# Rag_Full_stack

./: compose.yaml  readme.md
backend/: Dockerfile.dev  env_backup  pyproject.toml
backend/app/: main.py  settings.py
frontend/: Dockerfile.dev  pyproject.toml
frontend/app/: main.py  settings.py
